# Multicast-Client-Server-Example

./: .appveyor.yml  .travis.yml  AUTHORS  CMakeLists.txt  Makefile  Makefile.am  README  README.md  client.c  configure.ac  server.c
.github/: FUNDING.yml
.github/workflows/: ci.yml
src/: Makefile.am  client.c  msock.c  msock.h  server.c
